<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/draw_black"
        android:orderInCategory="100"
        android:title="@string/black_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/draw_blue"
        android:orderInCategory="200"
        android:title="@string/blue_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/draw_red"
        android:orderInCategory="300"
        android:title="@string/red_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/draw_green"
        android:orderInCategory="400"
        android:title="@string/green_setting"
        app:showAsAction="never"/>




</menu>