<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.niu.cs.z1761257.ccurve.MainActivity"
    android:id="@+id/screen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/up_label"
        android:id="@+id/upButton"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:onClick="stepUp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_level"
        android:id="@+id/levelNumberTextView"
        android:layout_below="@+id/upButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/down_label"
        android:id="@+id/downButton"
        android:layout_below="@+id/levelNumberTextView"
        android:layout_centerHorizontal="true"
        android:onClick="stepDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/draw_label"
        android:id="@+id/drawButton"
        android:layout_below="@+id/downButton"
        android:layout_centerHorizontal="true"
        android:onClick="drawFractal" />

</RelativeLayout>
